# zuup-forge

./: .gitignore  001_initial.sql  001_initial_sqlite.sql  ACTION_ITEMS.md  CURSOR_EXECUTION_PLAN.md  CURSOR_EXECUTION_PLAN_V2.md  DEPLOYMENT_HEALTH.md  Dockerfile  FORGE_BENCHMARK_SCORECARD.md  INVESTOR_READINESS_ASSESSMENT.md  Makefile  PHASE0_COMPLETION_REPORT.md  ZUUP_FORGE_GAP_ANALYSIS.md  cursorrules  index.py  models.py  platform.spec.json  project.json  pyproject.toml  rate_limit.py  readme.md  render.yaml  requirements.txt  routes.py  schema_gen.py  test_forge_core.py  vercel.json
.github/workflows/: ci.yml
api/: index.py
forge/cli/: main.py
forge/compiler/: __init__.py  api_gen.py  parser.py  schema_gen.py  spec_schema.py
forge/integrations/: __init__.py  sam_gov.py
forge/substrate/zuup_ai/: __init__.py
forge/substrate/zuup_audit/: __init__.py  middleware.py
forge/substrate/zuup_auth/: __init__.py  middleware.py
forge/substrate/zuup_gateway/: __init__.py  rate_limit.py  versioning.py
forge/substrate/zuup_observe/: __init__.py  tracing.py
forge/ui/: app.py  index.html
forge/ui/static/: forge.css  forge.js
frontend/: index.html  style.css
public/static/: forge.css  forge.js
scripts/: demo.sh  seed_sam_gov.py
specs/: aureon.platform.yaml
tests/: test_audit.py  test_compiler.py  test_forge_compiler.py  test_sam_gov.py
tests/unit/: test_forge_core.py
zuup-forge/: .env.example  DEPLOY_AUREON.md  Makefile  index.py  pyproject.toml  railway.toml  requirements.txt
zuup-forge/forge/cli/: main.py
zuup-forge/forge/compiler/: __init__.py
zuup-forge/forge/substrate/zuup_audit/: __init__.py
zuup-forge/forge/substrate/zuup_observe/: __init__.py  health.py
zuup-forge/forge/ui/: __init__.py  app.py
zuup-forge/public/static/: forge.css  forge.js
zuup_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
